crates/ink/tests/ui/event/fail/multiple_topic_args_inline.rs
#[ink::event]
pub struct Event {
    #[ink(topic, topic)]
    pub topic: [u8; 32],
}

fn main() {}