crates/ink/tests/ui/event/fail/multiple_topic_args_inline.stderr
error: Only a single `#[ink(topic)]` is allowed
 --> tests/ui/event/fail/multiple_topic_args_inline.rs:3:18
  |
3 |     #[ink(topic, topic)]
  |                  ^^^^^
